# Valkey

./: .gitignore  Cargo.toml  env.example
src/: bot.rs  config.rs  main.rs
src/api/: mod.rs  register.rs  server.rs  types.rs
src/embed/: score.rs
src/handlers/commands/: register.rs
src/models/: mod.rs  score.rs  user.rs
src/services/: api.rs
