[package]
name = "osefmebot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.4"
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
